--- a/configserver/src/main/resources/shared/menu-dev.yml
+++ b/configserver/src/main/resources/shared/menu-dev.yml
@@ -5,7 +5,7 @@ spring:
     name: menu
   datasource:
     name: takeawayOrdering
-    url: jdbc:mysql://18.222.190.64:3306/takeawayOrdering
+    url: jdbc:mysql://18.222.190.64:3306/takeawayOrdering2
     username: root
     password: root
 mybatis:
